# intentdectionsystem

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  Dockerfile  FILE_STRUCTURE.md  INSTALL.md  Makefile  OPENAI_MIGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_OPENAI.md  TROUBLESHOOTING.md  chartsd.yml  chats  csv_chart_recommender_fixed.yml  difpyt.py  docker-compose.yml  fix_api_key.py  pyproject.toml  requirements.txt  setup.bat
app/: __init__.py  main.py
app/agents/: __init__.py  graph.py  tools.py
app/api/: __init__.py  channels.py  ingest.py  intent.py
app/config/: settings.py
app/db/: __init__.py  database.py
app/models/: __init__.py  database.py  schemas.py
app/rag/: __init__.py  chunking.py  embeddings.py  vector_store.py
app/services/: __init__.py  ingestion.py  intent.py  llm.py  policy.py  prompts.py  retrieval.py
app/utils/: __init__.py  tracing.py
eval/: evaluate.py  offline.jsonl
kb/: sample_channels.md
policies/: router.yaml
prompts/: entities.yaml  rag_answer.yaml  router.yaml  validate_kb.yaml
schemas/: intent_result.json  understand_and_open_response.json
scripts/: ingest_cli.py  init_db.py  test_system.py  verify_setup.py
tests/: conftest.py  test_intent.py  test_rag.py
